--- a/WebAppProject-main/public/index.html
+++ b/WebAppProject-main/public/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" type="text/css" href="/public/style.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
 </head>
-<!-- was this what I was supposed to do --!>
-<link  rel = "stylesheet" type = "text/css" href="style.css" />
+<!-- was this what I was supposed to do
+<link  rel = "stylesheet" type = "text/css" href="style.css" /> --!>
 <body onload="welcome();">
 
 <div class="title">
