Working on HTML for Chat (Need to discuss w TAs). "Finsihed" docker file and docker compsoe file need to run with TA's - 1 hr of responding and docker and docker.yml files

--- a/WebAppProject-main/public/index.html
+++ b/WebAppProject-main/public/index.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" type="text/css" href="/public/style.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
 </head>
+<!--<fieldset>-->
+<!--    <form action="/chat-messages" method= "post">-->
+<!--    <input type = "text" name = ""-->
+<!--</fieldset>-->
 <!-- was this what I was supposed to do
 <link  rel = "stylesheet" type = "text/css" href="style.css" /> --!>
 <body onload="welcome();">
@@ -40,7 +44,13 @@
                 Chat:
                 <input id="chat-text-box" type="text">
             </label>
-            <button id="chat-button" onclick="sendChat()">Send</button>
+            <!-- CURRENT WORK - W3+ NOTES + FRONTDEV -->
+<!--                <form action="/chat-messages" method= "post">-->
+<!--                    <label Send </label>-->
+                    <button id="chat-button" onclick="sendChat()">Send</button>
+                    <input type="text" id="chat-button" name="send"><br>
+            <!--<button id="chat-button" onclick="sendChat()">Send</button>-->
+
         </div>
 
     </div>
